--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="col-md-4 mb-4">
           <div class="card project-card shadow">
             <div class="card-body">
-              <h4 class="card-title">To-Do List App</h4> <br />
+              <h4 class="card-title">To-Do List App</h4>
               <p class="card-text">A user-friendly to-do list app to manage daily tasks effectively.</p>
               <a href="https://github.com/chandrashekhar1998/TaskList-Pro-Master-Your-To-Dos-with-Ease" class="btn btn-primary" target="_blank">View on GitHub</a>
             </div>
